--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,2 +1,3 @@
 ﻿#configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Help.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BombermanFont.TTF" ${CMAKE_BINARY_DIR} COPYONLY)
