--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,3 +1,8 @@
 ﻿#configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Help.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BombermanFont.TTF" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Player.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Rock.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Door.png" ${CMAKE_BINARY_DIR} COPYONLY)
