--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -6,3 +6,7 @@ configure_file ("Rock.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Door.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Playlist.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Level001.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Level002.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Level003.txt" ${CMAKE_BINARY_DIR} COPYONLY)
