--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -6,6 +6,8 @@ configure_file ("Rock.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Door.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Bomb.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Explosion.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Playlist.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level001.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level002.txt" ${CMAKE_BINARY_DIR} COPYONLY)
