--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -3,11 +3,15 @@ configure_file ("Help.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BombermanFont.TTF" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Player.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Rock.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Wall.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Door.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Door.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Bomb.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Explosion.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GiftAddTime.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GiftKillGuard.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GiftAddLife.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GiftFreezeGuards.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Playlist.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level001.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level002.txt" ${CMAKE_BINARY_DIR} COPYONLY)
