--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -2,7 +2,7 @@
 configure_file ("Help.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BombermanFont.TTF" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Player.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Rock.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Rock.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Wall.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Door.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
