--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿#configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Help.txt" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("BombermanFont.TTF" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Athelas.ttc" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Player.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Rock.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Wall.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -12,7 +12,14 @@ configure_file ("GiftAddTime.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("GiftKillGuard.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("GiftAddLife.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("GiftFreezeGuards.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Background.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Playlist.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level001.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level002.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level003.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BombExplodeMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("CountDownMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("FinishGameMusic.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GameMusic.mp3" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerFailedMusic.mp3" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("WelcomeMusic.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
