--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -19,7 +19,8 @@ configure_file ("Level002.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Level003.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BombExplodeMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("CountDownMusic.wav" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("FinishGameMusic.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("GameMusic.mp3" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerFailedMusic.mp3" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("LifeOneUp.mp3" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("KillGuardSound.mp3" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("WelcomeMusic.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
